--- a/package/linino/node-socket.io-client/Makefile
+++ b/package/linino/node-socket.io-client/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2014 Dog Hunter AG
+# Copyright (C) 2014 Arduino LLC
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
@@ -7,35 +7,35 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NPM_NAME:=noble
+PKG_NPM_NAME:=socket.io-client
 PKG_NAME:=node-$(PKG_NPM_NAME)
-PKG_VERSION:=1.8.0
+PKG_VERSION:=1.7.3
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
 PKG_SOURCE_URL:=http://registry.npmjs.org/$(PKG_NPM_NAME)/-/
-# PKG_MD5SUM:=f0de658691c32002da54e97750ee7e0e
+# PKG_MD5SUM:=8fa9a1e556a5ac5fa17b23630691df00
 
 PKG_BUILD_DEPENDS:=node
 PKG_NODE_VERSION:=6.10.0
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/node-$(PKG_NPM_NAME)
-  DEPENDS:=+node +bluez-libs +udev
-  SUBMENU:=Node.js
-  SECTION:=lang
-  CATEGORY:=Languages
-  TITLE:=A node.js BLE (Bluetooth low energy) central library.
-  URL:=https://www.npmjs.org/package/$(PKG_NPM_NAME)
+define Package/node-socket.io-client
+	DEPENDS:=+node
+	SUBMENU:=Node.js
+	SECTION:=lang
+	CATEGORY:=Languages
+	TITLE:=Fast, unopinionated, minimalist web framework
+	URL:=https://www.npmjs.org/package/socket.io
 endef
 
-define Package/node-$(PKG_NPM_NAME)/description
-	A node.js BLE (Bluetooth low energy) central library.
+define Package/node-socket.io-client/description
+	Fast, unopinionated, minimalist web framework
 endef
 
 define Build/Prepare
-	/bin/tar xzf $(DL_DIR)/$(PKG_SOURCE) -C $(PKG_BUILD_DIR) --strip-components=1
+	/bin/tar xzf $(DL_DIR)/$(PKG_SOURCE) -C $(PKG_BUILD_DIR) --strip-components 1
 	$(Build/Patch)
 endef
 
@@ -43,16 +43,14 @@ define Build/Compile
 	$(MAKE_FLAGS) \
 	PATH="/usr/bin/:$(PATH)" \
 	GYPFLAGS="-Dv8_use_mips_abi_hardfloat=false -Dv8_can_use_fpu_instructions=false" \
-	CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(TARGET_CPPFLAGS) $(EXTRA_CPPFLAGS) -I$(STAGING_DIR)/usr/include" \
-	CXXFLAGS="$(TARGET_CXXFLAGS) $(EXTRA_CXXFLAGS) $(TARGET_CPPFLAGS) $(EXTRA_CPPFLAGS) -I$(STAGING_DIR)/usr/include" \
-	LDFLAGS="-L$(TOOLCHAIN_DIR)/lib/ -Wl,-rpath-link $(TOOLCHAIN_DIR)/lib/ -L$(STAGING_DIR)/lib" \
+	LDFLAGS="-L$(TOOLCHAIN_DIR)/lib/ -Wl,-rpath-link $(TOOLCHAIN_DIR)/lib/" \
 	npm_config_arch=mips \
 	npm_config_nodedir=$(BUILD_DIR)/node-v$(PKG_NODE_VERSION)/ \
 	PREFIX="$(PKG_INSTALL_DIR)/usr/" \
 	$(STAGING_DIR_HOST)/bin/npm install -g $(PKG_BUILD_DIR)
 endef
 
-define Package/node-$(PKG_NPM_NAME)/install
+define Package/node-socket.io-client/install
 	$(INSTALL_DIR) $(1)/usr/lib/
 	
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/node_modules $(1)/usr/lib/
@@ -69,4 +67,5 @@ else
 fi
 endef
 
-$(eval $(call BuildPackage,node-$(PKG_NPM_NAME)))
+$(eval $(call BuildPackage,node-socket.io-client))
+
