--- a/.config
+++ b/.config
@@ -3128,6 +3128,11 @@ CONFIG_PACKAGE_luasql-sqlite3=m
 # Node.js
 #
 CONFIG_PACKAGE_node=m
+
+#
+# Module Selection
+#
+# CONFIG_NODEJS_ICU is not set
 CONFIG_PACKAGE_node-alljoyn=m
 # CONFIG_PACKAGE_node-arduino-firmata is not set
 CONFIG_PACKAGE_node-authenticate-pam=m
@@ -3146,14 +3151,16 @@ CONFIG_PACKAGE_node-ideino-linino-lib=m
 CONFIG_PACKAGE_node-johnny-five=m
 CONFIG_PACKAGE_node-modbus=m
 CONFIG_PACKAGE_node-muzzley-client=m
-CONFIG_PACKAGE_node-nitrogen=m
-CONFIG_PACKAGE_node-nitrogen-cli=m
-CONFIG_PACKAGE_node-nitrogen-leveldb-store-mips=m
+# CONFIG_PACKAGE_node-nitrogen is not set
+# CONFIG_PACKAGE_node-nitrogen-cli is not set
+# CONFIG_PACKAGE_node-nitrogen-leveldb-store-mips is not set
 CONFIG_PACKAGE_node-noble=m
+CONFIG_PACKAGE_node-node-red=m
 CONFIG_PACKAGE_node-reverse-wstunnel=m
 CONFIG_PACKAGE_node-serialport=m
 CONFIG_PACKAGE_node-simple-xmpp=m
 CONFIG_PACKAGE_node-socket.io=m
+CONFIG_PACKAGE_node-socket.io-client=m
 CONFIG_PACKAGE_node-sqlite3=m
 CONFIG_PACKAGE_node-ws=m
 
@@ -3760,7 +3767,6 @@ CONFIG_PACKAGE_libapr=m
 CONFIG_PACKAGE_libaprutil=m
 # CONFIG_PACKAGE_libarchive is not set
 # CONFIG_PACKAGE_libartnet is not set
-CONFIG_PACKAGE_libasm=m
 CONFIG_PACKAGE_libassuan=y
 CONFIG_PACKAGE_libaudiofile=m
 CONFIG_PACKAGE_libavahi-client=m
@@ -3826,13 +3832,14 @@ CONFIG_PACKAGE_libdbi=m
 # CONFIG_PACKAGE_libdbd-mysql is not set
 # CONFIG_PACKAGE_libdbd-pgsql is not set
 # CONFIG_PACKAGE_libdbd-sqlite3 is not set
-CONFIG_PACKAGE_libdbus=y
-CONFIG_PACKAGE_libdbus-glib=m
-CONFIG_PACKAGE_libdevmapper=m
 # CONFIG_PACKAGE_libdmapsharing is not set
 CONFIG_PACKAGE_libdnet=m
 CONFIG_PACKAGE_libedit=m
 CONFIG_PACKAGE_libelf1=y
+CONFIG_PACKAGE_libasm=m
+CONFIG_PACKAGE_libdbus=y
+CONFIG_PACKAGE_libdbus-glib=m
+CONFIG_PACKAGE_libdevmapper=m
 CONFIG_PACKAGE_libdw=m
 # CONFIG_PACKAGE_libesmtp is not set
 # CONFIG_PACKAGE_libev is not set
@@ -3870,11 +3877,11 @@ CONFIG_PACKAGE_libgps=m
 CONFIG_PACKAGE_hidapi=m
 # CONFIG_PACKAGE_ibrcommon is not set
 # CONFIG_PACKAGE_ibrdtn is not set
+CONFIG_PACKAGE_icu=m
 # CONFIG_PACKAGE_libhttp-parser is not set
 CONFIG_PACKAGE_libical=m
 CONFIG_PACKAGE_libiconv=m
 CONFIG_PACKAGE_libiconv-full=m
-CONFIG_PACKAGE_libicu=m
 CONFIG_PACKAGE_libid3tag=m
 CONFIG_PACKAGE_libidn=m
 # CONFIG_PACKAGE_libimobiledevice is not set
