--- a/.config
+++ b/.config
@@ -3116,6 +3116,11 @@ CONFIG_PACKAGE_luasql-sqlite3=m
 # Node.js
 #
 CONFIG_PACKAGE_node=m
+
+#
+# Module Selection
+#
+# CONFIG_NODEJS_ICU is not set
 CONFIG_PACKAGE_node-alljoyn=m
 # CONFIG_PACKAGE_node-arduino-firmata is not set
 CONFIG_PACKAGE_node-authenticate-pam=m
@@ -3129,7 +3134,7 @@ CONFIG_PACKAGE_node-canvas=m
 CONFIG_PACKAGE_node-expat=m
 CONFIG_PACKAGE_node-express=m
 CONFIG_PACKAGE_node-gm=m
-# CONFIG_PACKAGE_node-hid is not set
+CONFIG_PACKAGE_node-hid=m
 CONFIG_PACKAGE_node-ideino-linino-lib=m
 CONFIG_PACKAGE_node-johnny-five=m
 CONFIG_PACKAGE_node-modbus=m
@@ -3138,13 +3143,14 @@ CONFIG_PACKAGE_node-nitrogen=m
 CONFIG_PACKAGE_node-nitrogen-cli=m
 CONFIG_PACKAGE_node-nitrogen-leveldb-store-mips=m
 CONFIG_PACKAGE_node-noble=m
+CONFIG_PACKAGE_node-node-red=m
 CONFIG_PACKAGE_node-node-static=m
-CONFIG_PACKAGE_node-red=m
 CONFIG_PACKAGE_node-red-node-arduino=m
 CONFIG_PACKAGE_node-reverse-wstunnel=m
 CONFIG_PACKAGE_node-serialport=m
 CONFIG_PACKAGE_node-simple-xmpp=m
 CONFIG_PACKAGE_node-socket.io=m
+CONFIG_PACKAGE_node-socket.io-client=m
 CONFIG_PACKAGE_node-sqlite3=m
 CONFIG_PACKAGE_node-static=m
 CONFIG_PACKAGE_node-ws=m
@@ -3863,11 +3869,11 @@ CONFIG_PACKAGE_libgpg-error=y
 CONFIG_PACKAGE_hidapi=y
 # CONFIG_PACKAGE_ibrcommon is not set
 # CONFIG_PACKAGE_ibrdtn is not set
+CONFIG_PACKAGE_icu=m
 # CONFIG_PACKAGE_libhttp-parser is not set
 CONFIG_PACKAGE_libical=m
 CONFIG_PACKAGE_libiconv=y
 CONFIG_PACKAGE_libiconv-full=m
-CONFIG_PACKAGE_libicu=m
 CONFIG_PACKAGE_libid3tag=m
 CONFIG_PACKAGE_libidn=m
 # CONFIG_PACKAGE_libimobiledevice is not set
@@ -6074,6 +6080,12 @@ CONFIG_PACKAGE_xfs-growfs=m
 CONFIG_PACKAGE_xfs-mkfs=m
 
 #
+# LoRa
+#
+CONFIG_PACKAGE_lora-gateway=m
+CONFIG_PACKAGE_packet-forwarder=m
+
+#
 # RTKLIB Suite
 #
 # CONFIG_PACKAGE_convbin is not set
@@ -6381,7 +6393,6 @@ CONFIG_PACKAGE_lm-sensors-detect=m
 CONFIG_PACKAGE_logger=m
 # CONFIG_PACKAGE_logtrigger is not set
 CONFIG_PACKAGE_look=m
-CONFIG_PACKAGE_lora-gateway=m
 CONFIG_PACKAGE_losetup=m
 CONFIG_PACKAGE_lsof=m
 CONFIG_PACKAGE_lxc=m
@@ -6499,7 +6510,6 @@ CONFIG_PACKAGE_openocd=y
 CONFIG_PACKAGE_openssl-util=y
 # CONFIG_PACKAGE_opus-tools is not set
 CONFIG_PACKAGE_owipcalc=m
-CONFIG_PACKAGE_packet-forwarder=m
 CONFIG_PACKAGE_pciutils=m
 CONFIG_PACKAGE_pcscd=m
 # CONFIG_PACKAGE_pps-tools is not set
