--- a/.config
+++ b/.config
@@ -6064,6 +6064,12 @@ CONFIG_PACKAGE_xfs-growfs=m
 CONFIG_PACKAGE_xfs-mkfs=m
 
 #
+# LoRa
+#
+CONFIG_PACKAGE_lora-gateway=m
+CONFIG_PACKAGE_packet-forwarder=m
+
+#
 # RTKLIB Suite
 #
 # CONFIG_PACKAGE_convbin is not set
@@ -6370,7 +6376,6 @@ CONFIG_PACKAGE_lm-sensors-detect=m
 CONFIG_PACKAGE_logger=m
 # CONFIG_PACKAGE_logtrigger is not set
 CONFIG_PACKAGE_look=m
-CONFIG_PACKAGE_lora-gateway=m
 CONFIG_PACKAGE_losetup=m
 CONFIG_PACKAGE_lsof=m
 CONFIG_PACKAGE_lxc=m
@@ -6488,7 +6493,6 @@ CONFIG_PACKAGE_openocd=m
 CONFIG_PACKAGE_openssl-util=y
 # CONFIG_PACKAGE_opus-tools is not set
 CONFIG_PACKAGE_owipcalc=m
-CONFIG_PACKAGE_packet-forwarder=m
 CONFIG_PACKAGE_pciutils=m
 CONFIG_PACKAGE_pcscd=m
 # CONFIG_PACKAGE_pps-tools is not set
