--- a/.config
+++ b/.config
@@ -3134,14 +3134,14 @@ CONFIG_PACKAGE_node-canvas=m
 CONFIG_PACKAGE_node-expat=m
 CONFIG_PACKAGE_node-express=m
 CONFIG_PACKAGE_node-gm=m
-CONFIG_PACKAGE_node-hid=m
+# CONFIG_PACKAGE_node-hid is not set
 CONFIG_PACKAGE_node-ideino-linino-lib=m
 CONFIG_PACKAGE_node-johnny-five=m
 CONFIG_PACKAGE_node-modbus=m
 CONFIG_PACKAGE_node-muzzley-client=m
-CONFIG_PACKAGE_node-nitrogen=m
-CONFIG_PACKAGE_node-nitrogen-cli=m
-CONFIG_PACKAGE_node-nitrogen-leveldb-store-mips=m
+# CONFIG_PACKAGE_node-nitrogen is not set
+# CONFIG_PACKAGE_node-nitrogen-cli is not set
+# CONFIG_PACKAGE_node-nitrogen-leveldb-store-mips is not set
 CONFIG_PACKAGE_node-noble=m
 CONFIG_PACKAGE_node-node-red=m
 CONFIG_PACKAGE_node-node-static=m
