--- a/.config
+++ b/.config
@@ -3131,6 +3131,7 @@ CONFIG_PACKAGE_node-canvas=m
 # CONFIG_PACKAGE_node-cylon-firmata is not set
 # CONFIG_PACKAGE_node-cylon-gpio is not set
 # CONFIG_PACKAGE_node-cylon-i2c is not set
+CONFIG_PACKAGE_node-epoll=m
 CONFIG_PACKAGE_node-expat=m
 CONFIG_PACKAGE_node-express=m
 CONFIG_PACKAGE_node-gm=m
