--- a/.config
+++ b/.config
@@ -2918,7 +2918,7 @@ CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-usbip=m
 CONFIG_PACKAGE_kmod-usbip-client=m
 CONFIG_PACKAGE_kmod-usbip-server=m
-# CONFIG_PACKAGE_kmod-usbmon is not set
+CONFIG_PACKAGE_kmod-usbmon=y
 
 #
 # Video Support
