openocd-dev : release of OpenOCD v0.10.0 stable + nrf52 support

--- a/.config
+++ b/.config
@@ -6507,6 +6507,7 @@ CONFIG_PACKAGE_oled-utils=m
 CONFIG_PACKAGE_openldap-utils=m
 CONFIG_PACKAGE_openobex=m
 CONFIG_PACKAGE_openocd=y
+CONFIG_PACKAGE_openocd-dev=m
 # CONFIG_PACKAGE_opensc-utils is not set
 CONFIG_PACKAGE_openssl-util=y
 # CONFIG_PACKAGE_opus-tools is not set
