git : update to v2.13.1

--- a/.config
+++ b/.config
@@ -5737,7 +5737,8 @@ CONFIG_PACKAGE_xl2tpd=m
 # Version Control Systems
 #
 CONFIG_PACKAGE_git=m
-# CONFIG_PACKAGE_git-http is not set
+CONFIG_PACKAGE_git-gitweb=m
+CONFIG_PACKAGE_git-http=m
 
 #
 # Web Servers/Proxies
