ar71xx : updating main config for SAMD

--- a/.config
+++ b/.config
@@ -5291,6 +5291,11 @@ CONFIG_PACKAGE_prosody=m
 # LoRa
 #
 CONFIG_PACKAGE_lora-gateway=m
+
+#
+# LoRa Tweaks
+#
+# CONFIG_LORA_DEBUG is not set
 CONFIG_PACKAGE_lora-packet-forwarder-au=m
 CONFIG_PACKAGE_lora-packet-forwarder-eu=m
 CONFIG_PACKAGE_lora-packet-forwarder-us=m
